# cuda-tile

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  pyproject.toml  requirements.txt
.cursor/rules/: running-tests.mdc
basic_tile/: __init__.py  analyzer.py  bytecode_backend.py  cli.py  gpu_runner.py  lexer.py  runner.py  tokens.py
ci/: run-tests-docker.sh  run-tests.sh
cmake/: IncludeLLVM.cmake
cutile_basic/: __init__.py  _analyzer.py  _bytecode.py  _codegen.py  _lexer.py  _parser.py  _runner.py  _textual.py  analyzer.py  ast_nodes.py  bytecode.py  bytecode_backend.py  cli.py  codegen.py  gpu.py  gpu_runner.py  lexer.py  parser.py  textual.py  tokens.py
docs/: Makefile  api.rst  architecture.rst  cli.rst  conf.py  examples.rst  execution_model.rst  getting_started.rst  index.rst  language_reference.rst  python_compilation_api.rst
docs/_static/: custom.css
examples/: array_sum.bas  fibonacci.bas  gemm.bas  gemm.py  gemm_demo.py  gpu_demo.py  hello.bas  hello.py  vecadd_ir.mlir  vector_add.bas  vector_add.py  vector_add_demo.py
include/cuda_tile-c/: Registration.h
include/cuda_tile-c/Dialect/: CudaTileDialect.h
include/cuda_tile/Bytecode/Common/: Version.h
include/cuda_tile/Bytecode/Translation/: BytecodeTranslation.h
lib/: CMakeLists.txt
lib/Bytecode/: BytecodeEnums.h
lib/Bytecode/Common/: CMakeLists.txt  Version.cpp
lib/Bytecode/Reader/: BytecodeReader.cpp  CMakeLists.txt
lib/Bytecode/Translation/: BytecodeTranslation.cpp  CMakeLists.txt
lib/Bytecode/Writer/: BytecodeWriter.cpp  CMakeLists.txt
lib/CAPI/: Registration.cpp
lib/CAPI/Dialect/: CMakeLists.txt  CudaTileDialect.cpp
lib/Dialect/CudaTile/IR/: Attributes.cpp  CMakeLists.txt  CudaTile.cpp  CudaTileTesting.cpp  Types.cpp
python/: CMakeLists.txt
python/Dialect/: DialectCudaTile.cpp
python/cuda_tile/dialects/: cuda_tile_ops.py  cuda_tile_utils.py
test/: CMakeLists.txt  lit.cfg.py
test/Bytecode/: operationsTest.mlir  unsupportedVersionTest.mlir
test/Bytecode/invalid/: invalid_structure.mlir
test/Dialect/CudaTile/: arith_invalid.mlir  canonicalize.mlir  conversion_invalid.mlir  dense_attr.mlir  entry_opt_hints_invalid.mlir  invalid.mlir  math_invalid.mlir  ops.mlir  round_trip_test.sh  types.mlir  view_invalid.mlir
test/Transforms/: synthesize-debuginfo-scopes.mlir
tests/: test_analyzer.py  test_bytecode.py  test_bytecode_backend.py  test_codegen.py  test_examples.py  test_gpu.py  test_lexer.py  test_parser.py  test_runner.py  test_textual.py
tests/textual_gold/: gemm.mlir  hello.mlir  vector_add.mlir
tools/: CMakeLists.txt
tools/cuda-tile-tblgen/: BytecodeGen.cpp  BytecodeReaderGen.cpp  CMakeLists.txt  CudaTileAttr.cpp  CudaTileAttr.h  CudaTileType.cpp  CudaTileType.h  SpecGen.cpp
tools/cuda-tile-translate/: CMakeLists.txt  cuda-tile-translate.cpp
tools/cuda-tile-translate/test/: RoundTripTestRegistration.cpp  RoundTripTestRegistration.h
(+14 files in other folders)
